cleaning up skills section

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
     -->
     <title>Carlson Dultra</title>
     <link href="/public/output.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
